// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render NextPage with all props 1`] = `
<div
  className="nextpage"
>
  <p
    className="nextpage__text"
  >
    Text!
  </p>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <div
      className="nextpage__arrow"
    >
      <img
        src="/dist/images/icons/down_arrow_white.png"
      />
    </div>
  </NavLink>
</div>
`;

exports[`Render NextPage with no props 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <div
      className="nextpage__arrow"
    >
      <img
        src="/dist/images/icons/down_arrow_white.png"
      />
    </div>
  </NavLink>
</div>
`;

exports[`Render NextPage with route 1`] = `
<div
  className="nextpage"
>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="Route!"
  >
    <div
      className="nextpage__arrow"
    >
      <img
        src="/dist/images/icons/down_arrow_white.png"
      />
    </div>
  </NavLink>
</div>
`;

exports[`Render NextPage with text 1`] = `
<div
  className="nextpage"
>
  <p
    className="nextpage__text"
  >
    Text!
  </p>
  <NavLink
    activeClassName="active"
    ariaCurrent="true"
    to="/"
  >
    <div
      className="nextpage__arrow"
    >
      <img
        src="/dist/images/icons/down_arrow_white.png"
      />
    </div>
  </NavLink>
</div>
`;
